cabal-version:   3.4
name:            lotos
version:         0.1.0.0

--
license:         BSD-3-Clause
author:          jacob
maintainer:      jacobbishopxy@gmail.com
category:        Data
build-type:      Simple
extra-doc-files: CHANGELOG.md

common shared-properties
  default-language:   GHC2024
  build-depends:      base >=4 && <5
  ghc-options:        -Wall
  default-extensions: OverloadedStrings

common test
  hs-source-dirs: test
  build-depends:
    , HUnit
    , lotos

----------------------------------------------------------------------------------------------------
-- Lib
----------------------------------------------------------------------------------------------------

library
  import:             shared-properties
  default-extensions: CPP
  exposed-modules:
    Lotos
    Lotos.Airflow
    Lotos.Util

  other-modules:
    Lotos.Airflow.Conf
    Lotos.Airflow.Cron

  -- other-extensions:
  build-depends:
    , aeson
    , base
    , bytestring
    , containers
    , directory
    , filepath
    , hcsv
    , mtl
    , stm
    , text
    , time
    , unordered-containers
    , vector
    , yaml

  hs-source-dirs:     src

----------------------------------------------------------------------------------------------------
-- Test
----------------------------------------------------------------------------------------------------

test-suite test-read-cron
  import:        shared-properties, test
  type:          exitcode-stdio-1.0
  main-is:       ReadCron.hs
  build-depends: vector

test-suite test-airflow
  import:        shared-properties, test
  type:          exitcode-stdio-1.0
  main-is:       Airflow.hs
  build-depends: vector
