cabal-version:   3.14
name:            lotos
version:         0.1.0.0
synopsis:        ZeroMQ-backed task load-balancer framework
description:     Library components for building ZeroMQ-backed task brokers, workers, and clients with STM-backed scheduling state and concurrent process execution helpers.
license:         BSD-3-Clause
author:          jacob
maintainer:      jacobbishopxy@gmail.com
category:        Distributed Computing
build-type:      Simple
tested-with:     GHC == 9.14.1
extra-doc-files: CHANGELOG.md

common shared-properties
  default-language:   GHC2024
  build-depends:      base >=4 && <5
  ghc-options:        -Wall
  default-extensions: OverloadedStrings

common test
  hs-source-dirs: test
  build-depends:
    , HUnit
    , lotos

common demo
  hs-source-dirs: test
  build-depends:
    , lotos

----------------------------------------------------------------------------------------------------
-- Lib
----------------------------------------------------------------------------------------------------

library
  import:             shared-properties
  default-extensions: CPP
  exposed-modules:
    Lotos
    Lotos.Logger
    Lotos.Proc
    Lotos.TSD.Map
    Lotos.TSD.Queue
    Lotos.TSD.RingBuffer
    Lotos.Util
    Lotos.Zmq
    Lotos.Zmq.Internal.HandoffQueueStats
    Lotos.Zmq.Internal.Liveness
    Lotos.Zmq.Internal.Retry
    Lotos.Zmq.Internal.WorkerRuntime
    Lotos.Zmq.LBS.LogIngest
    Lotos.Zmq.LBW.LogTransport

  other-modules:
    Lotos.Proc.ConcExecutor
    Lotos.Zmq.Adt
    Lotos.Zmq.Config
    Lotos.Zmq.Error
    Lotos.Zmq.LBC
    Lotos.Zmq.LBS
    Lotos.Zmq.LBS.InfoStorage
    Lotos.Zmq.LBS.SocketLayer
    Lotos.Zmq.LBS.TaskProcessor
    Lotos.Zmq.LBW
    Lotos.Zmq.Util

  -- other-extensions:
  build-depends:
    , aeson
    , async
    , attoparsec
    , base
    , bytestring
    , containers
    , directory
    , dlist
    , fast-logger
    , filepath
    , mtl
    , process
    , servant
    , servant-server
    , stm
    , text
    , time
    , unordered-containers
    , uuid
    , vector
    , wai
    , warp
    , yaml
    , zmqx

  hs-source-dirs:     src

----------------------------------------------------------------------------------------------------
-- Tests: bounded assertion-based regression suites only.
----------------------------------------------------------------------------------------------------

test-suite test-conc-executor
  import:         shared-properties, test
  type:           exitcode-stdio-1.0
  hs-source-dirs: test
  main-is:        ConcExecutor.hs
  ghc-options:    -threaded -rtsopts -with-rtsopts=-N
  build-depends:

test-suite test-zmq-worker-frames
  import:         shared-properties, test
  type:           exitcode-stdio-1.0
  hs-source-dirs: test
  main-is:        ZmqWorkerFrames.hs
  ghc-options:    -threaded -rtsopts -with-rtsopts=-N
  build-depends:
    , stm
    , time
    , zmqx

test-suite test-zmq-client-ack-frames
  import:         shared-properties, test
  type:           exitcode-stdio-1.0
  hs-source-dirs: test
  main-is:        ZmqClientAckFrames.hs
  ghc-options:    -threaded -rtsopts -with-rtsopts=-N
  build-depends:
    , zmqx

test-suite test-zmq-worker-wake
  import:         shared-properties, test
  type:           exitcode-stdio-1.0
  hs-source-dirs: test
  main-is:        ZmqWorkerWake.hs
  ghc-options:    -threaded -rtsopts -with-rtsopts=-N
  build-depends:

test-suite test-zmq-log-protocol-config
  import:         shared-properties, test
  type:           exitcode-stdio-1.0
  hs-source-dirs: test
  main-is:        ZmqLogProtocolConfig.hs
  ghc-options:    -threaded -rtsopts -with-rtsopts=-N
  build-depends:
    , aeson
    , bytestring
    , time

test-suite test-zmq-log-ingest
  import:         shared-properties, test
  type:           exitcode-stdio-1.0
  hs-source-dirs: test
  main-is:        ZmqLogIngest.hs
  ghc-options:    -threaded -rtsopts -with-rtsopts=-N
  build-depends:
    , aeson
    , bytestring
    , directory
    , text
    , time
    , zmqx

test-suite test-zmq-worker-log-transport
  import:         shared-properties, test
  type:           exitcode-stdio-1.0
  hs-source-dirs: test
  main-is:        ZmqWorkerLogTransport.hs
  ghc-options:    -threaded -rtsopts -with-rtsopts=-N
  build-depends:
    , bytestring
    , time
    , zmqx

----------------------------------------------------------------------------------------------------
-- Demos: runnable examples that should not execute under `cabal test all`.
----------------------------------------------------------------------------------------------------

executable demo-conc-executor2
  import:      shared-properties, demo
  main-is:     ConcExecutor2.hs
  ghc-options: -threaded -rtsopts -with-rtsopts=-N
  build-depends:
    , directory

executable demo-event-trigger
  import:        shared-properties, demo
  main-is:       EventTrigger.hs
  build-depends: time

executable demo-logger
  import:        shared-properties, demo
  main-is:       Logger.hs
  build-depends:
    , mtl
    , vector

executable demo-simple-servant
  import:        shared-properties, demo
  main-is:       SimpleServant.hs
  build-depends:
    , aeson
    , servant
    , servant-server
    , text
    , wai
    , warp

executable demo-zmq-xt
  import:      shared-properties, demo
  main-is:     ZmqXT.hs
  ghc-options: -threaded -rtsopts -with-rtsopts=-N
  build-depends:
    , bytestring
    , mtl
    , zmqx
