cabal-version:   3.14
name:            TaskSchedule
version:         0.1.0.0
license:         BSD-3-Clause
license-file:    LICENSE
author:          JacobX
maintainer:      jacobbishopxy@gmail.com
build-type:      Simple
tested-with:     GHC == 9.14.1
extra-doc-files: CHANGELOG.md

common shared-properties
  default-language:   GHC2024
  build-depends:      base >=4 && <5
  ghc-options:        -Wall
  hs-source-dirs:     .
  default-extensions: OverloadedStrings

------------------------------------------------------------------------------------------------


library ts-server-lib
  import:          shared-properties
  exposed-modules:
    Adt
    Server
    Util

  build-depends:
    , aeson
    , lotos
    , process
    , text

  hs-source-dirs:  src

executable ts-server
  import:         shared-properties
  main-is:        TaskScheduleServer.hs
  ghc-options:    -threaded -rtsopts -with-rtsopts=-N
  build-depends:
    , aeson
    , base
    , lotos
    , process
    , TaskSchedule:ts-server-lib
    , text

  hs-source-dirs: app

------------------------------------------------------------------------------------------------

library ts-worker-lib
  import:          shared-properties
  exposed-modules:
    Adt
    Util
    Worker

  build-depends:
    , aeson
    , lotos
    , process
    , text

  hs-source-dirs:  src

executable ts-worker
  import:         shared-properties
  main-is:        TaskScheduleWorker.hs
  ghc-options:    -threaded -rtsopts -with-rtsopts=-N
  build-depends:
    , aeson
    , base
    , lotos
    , process
    , TaskSchedule:ts-worker-lib
    , text

  hs-source-dirs: app

------------------------------------------------------------------------------------------------


test-suite test-worker-lifecycle
  import:         shared-properties
  type:           exitcode-stdio-1.0
  hs-source-dirs: test
  main-is:        WorkerLifecycle.hs
  ghc-options:    -threaded -rtsopts -with-rtsopts=-N
  build-depends:
    , HUnit
    , lotos
    , TaskSchedule:ts-worker-lib
    , time

------------------------------------------------------------------------------------------------



library ts-client-lib
  import:          shared-properties
  exposed-modules:
    Adt
    Client
    Util

  build-depends:
    , aeson
    , bytestring
    , lotos
    , process
    , text

  hs-source-dirs:  src

executable ts-client
  import:         shared-properties
  main-is:        TaskScheduleClient.hs
  ghc-options:
  build-depends:
    , aeson
    , base
    , bytestring
    , lotos
    , process
    , TaskSchedule:ts-client-lib
    , text

  hs-source-dirs: app
